--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -6,10 +6,21 @@
     font-family: 'Open Sans', sans-serif;
 }
 body {
-    background-color: #111827;
+  background-color: #111827;
+}
+video {
+  position: fixed;
+  min-width: 100%;
+  min-height: 100%;
+
+  top: 50%;
+  left: 50%;
+
+  transform: translateX(-50%) translateY(-50%);
+  z-index: -10000;
 }
 nav {
-    background-color: #111827;
+    background-color:none;
     border-bottom: rgba(255, 255, 255,0.2) 1px solid;
     width: 100%;
     height: 70px;
@@ -30,6 +41,9 @@ nav ul {
 nav ul li {
   margin-left: 35px;
   list-style: none;
+  background-color: rgba(17, 24, 39,0.8);
+  padding: 5px 10px;
+  border-radius: 5px;
 }
 nav ul li a{
   cursor: pointer;
@@ -38,6 +52,8 @@ nav ul li a{
   font-size: 1em;
   color: rgb(255, 255, 255);
   font-weight: 500;
+  font-weight: 700px;
+  letter-spacing: 1px;
 }
 nav ul li:hover {
   transform: translateY(-5px);
@@ -162,17 +178,26 @@ main .main__buttons a:hover {
   flex-direction: column;
 }
 #habitacion h1 {
-  margin-top: 100px;
+  margin-top: 150px;
   font-size: 3em;
   color: white;
+  background-color: rgba(204, 151, 37, 0.8);
   animation: none;
-  padding: 30px;
+  padding: 10px;
+  margin-bottom: 70px;
 }
 #habitacion h2 {
   color: #32c766;
   margin-top: 5px;
-  margin-top: 50px;
-  margin-bottom: 10px;
+  font-weight: 700;
+  background-color: rgba(255, 255, 255, 0.9);
+  padding: 15px;
+  margin-bottom: 80px;
+}
+#habitacion .botonPista {
+  padding: 0.8em 2em;
+  font-size: 1.5em;
+
 }
 #habitacion img {
   width: 400px;
@@ -182,21 +207,26 @@ main .main__buttons a:hover {
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: 25px;
 }
 #habitacion form h4 {
   color: white;
+  font-size: 2em;
+  font-weight: 700;
+  margin-bottom: 20px;
 }
 #habitacion form input {
   outline: none;
+  width: 400px;
+  height: 50px;
+  margin-bottom: 20px;
 }
 #habitacion form .enviarButton {
-  width: 100px;
+  width: 140px;
   height: 50px;
   background-color: #32c766;
   border-radius: 5px;
   color: white;
-  margin-top: 10px;
+  margin-bottom: 50px;
 }
 .pista {
     background-color: #1c2230;
@@ -231,10 +261,14 @@ main .main__buttons a:hover {
 }
 .pista div:first-child {
     padding: 10px 0 10px 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 .pista h3 {
-    margin-bottom: 20px;
-    font-size: 1.2em;
+  line-height: 1;
+  margin-bottom: 0;
+  font-size: 1.2em;
 }
 .pista h3:last-child {
     margin-bottom: 0;
