--- a/Views/Home/Habitacion4.cshtml
+++ b/Views/Home/Habitacion4.cshtml
@@ -1,37 +1,47 @@
 @{
     ViewData["Title"] = "Habitacion1";
+    string rute = ViewBag.Video;
 }
-<nav>
+<video src='@Url.Content(rute)'autoplay loop></video>
+<nav>   
         <img src="img/logo.png" alt="">
         <ul>
             <li> <a href='@Url.Action("Index","Home")'>Inicio</a> </li>
             <li> <a href='@Url.Action("Tutorial","Home")'>Tutorial</a> </li>
-            <li> <a href="">Iniciar Juego</a> </li>
-            <li> <a href="">Pistas</a> </li>
+            <li> <a href='@Url.Action("Comenzar","Home")'>Iniciar Juego</a> </li>
+            <li> <a href='@Url.Action("Pistas","Home")'>Pistas</a> </li>
             <li> <a href='@Url.Action("Creditos","Home")'>Creditos</a> </li>
         </ul>
 </nav>
 <main id="habitacion">
-    <div class="pista">
-        <h3>-"Blanco y claro como el mar azulasdsadsadds"</h3>
-        <h3>-"Blanco y claro como el mar azulasdsadsadds"</h3>
+    <div class="pista" style="left: 0;">
+        <div>
+        @{
+            for (int i = 0; i< @ViewBag.Pistas.Length;i++) {
+                <h3 style="display: none">@ViewBag.Pistas[i]</h3>
+            }
+        }
+        </div>
+        <div onclick="CerrarPista()" class="separador">
+            <
+        </div>
     </div>
-    <h1>Habitacion 4</h1>
-    <img src='@Url.Content("~/img/carcel1.jpg")' alt="">
-    <h2>"Hola como estas esta es el acertijo"</h2>
-    <div>
-        <button class="botonPista">
+    <h1>@ViewBag.Titulo</h1>
+    <h2>@ViewBag.Acertijo</h2>
+    <form action="/Home/Habitacion" method="post">
+        <h4>Respuesta:</h4>
+        <input type="hidden" value="4" name="sala">
+        <input type="text" name="clave" autocomplete="off">
+        <button type="submit" class="enviarButton">Enviar</button>
+    </form>
+        <div>
+        <button class="botonPista" onclick="ShowPista()">
             <span></span>
             <span></span>
             <span></span>
             <span></span> Pista
           </button>
     </div>
-    <form action="/Home/Habitacion" method="post">
-        <h4>Respuesta:</h4>
-        <input type="hidden" value="4" name="sala">
-        <input type="text" name="clave">
-        <button type="submit" class="enviarButton">Enviar</button>
-    </form>
 </main>
-<script src='@Url.Content("~/js/script.js")'></script>
+
+
