--- a/Views/Home/Habitacion3.cshtml
+++ b/Views/Home/Habitacion3.cshtml
@@ -3,16 +3,17 @@
     string rute = ViewBag.Video;
 }
 <video src='@Url.Content(rute)'autoplay loop></video>
-<nav>   
+ <nav>
         <img src="img/logo.png" alt="">
         <ul>
             <li> <a href='@Url.Action("Index","Home")'>Inicio</a> </li>
             <li> <a href='@Url.Action("Tutorial","Home")'>Tutorial</a> </li>
             <li> <a href='@Url.Action("Comenzar","Home")'>Iniciar Juego</a> </li>
+            <li> <a href='@Url.Action("Continuar","Home")'>Continuar Juego</a> </li>
             <li> <a href='@Url.Action("Pistas","Home")'>Pistas</a> </li>
             <li> <a href='@Url.Action("Creditos","Home")'>Creditos</a> </li>
         </ul>
-</nav>
+    </nav>
 <main id="habitacion">
     <div class="pista" style="left: 0;">
         <div>
