--- a/Views/Home/Pistas.cshtml
+++ b/Views/Home/Pistas.cshtml
@@ -1,21 +1,29 @@
 @{
     ViewData["Title"] = "Pistas";
 }
-    <nav>
+ <nav>
         <img src="img/logo.png" alt="">
         <ul>
-            <li> <a href="">Inicio</a> </li>
+            <li> <a href='@Url.Action("Index","Home")'>Inicio</a> </li>
             <li> <a href='@Url.Action("Tutorial","Home")'>Tutorial</a> </li>
             <li> <a href='@Url.Action("Comenzar","Home")'>Iniciar Juego</a> </li>
             <li> <a href='@Url.Action("Continuar","Home")'>Continuar Juego</a> </li>
-            <li> <a href="">Pistas</a> </li>
+            <li> <a href='@Url.Action("Pistas","Home")'>Pistas</a> </li>
             <li> <a href='@Url.Action("Creditos","Home")'>Creditos</a> </li>
         </ul>
     </nav>
     <main id="pistas">
         <h1>PISTAS</h1>
         <section>
-            <p>@ViewBag.Pistas[0]</p>
+            @{
+                foreach (KeyValuePair<int, string[]> pair in @ViewBag.Pistas)
+                {
+                    <div>
+                    <h2>@pair.Value[0]</h2>
+                    <h2>@pair.Value[1]</h2>
+                    </div>            
+                }
+            } 
         </section>
     </main>
     <footer></footer>
