--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -6,7 +6,7 @@
         <ul>
             <li> <a href='@Url.Action("Index","Home")'>Inicio</a> </li>
             <li> <a href='@Url.Action("Tutorial","Home")'>Tutorial</a> </li>
-            <li> <a href='@Url.Action("Comenzar","Home")'>Iniciar Juego</a> </li>
+            <li> <a href='@Url.Action("Iniciar","Home")'>Iniciar Juego</a> </li>
             <li> <a href='@Url.Action("Continuar","Home")'>Continuar Juego</a> </li>
             <li> <a href='@Url.Action("Pistas","Home")'>Pistas</a> </li>
             <li> <a href='@Url.Action("Creditos","Home")'>Creditos</a> </li>
@@ -15,7 +15,7 @@
     <main>
         <h1>EscapeRoom</h1>
         <div class="main__buttons">
-            <a href='@Url.Action("Comenzar","Home")'><h3>Iniciar Juego</h3></a>
+            <a href='@Url.Action("Iniciar","Home")'><h3>Iniciar Juego</h3></a>
             <a href='@Url.Action("Continuar","Home")'><h3>Continuar</h3></a>
         </div>
     </main>
