--- a/Views/Home/Creditos.cshtml
+++ b/Views/Home/Creditos.cshtml
@@ -2,12 +2,12 @@
     ViewData["Title"] = "Creditos";
 }
 
-  <nav>
+   <nav>
         <img src="img/logo.png" alt="">
         <ul>
             <li> <a href='@Url.Action("Index","Home")'>Inicio</a> </li>
             <li> <a href='@Url.Action("Tutorial","Home")'>Tutorial</a> </li>
-            <li> <a href='@Url.Action("Comenzar","Home")'>Iniciar Juego</a> </li>
+            <li> <a href='@Url.Action("Iniciar","Home")'>Iniciar Juego</a> </li>
             <li> <a href='@Url.Action("Continuar","Home")'>Continuar Juego</a> </li>
             <li> <a href='@Url.Action("Pistas","Home")'>Pistas</a> </li>
             <li> <a href='@Url.Action("Creditos","Home")'>Creditos</a> </li>
