--- a/Views/Home/perdedor.cshtml
+++ b/Views/Home/perdedor.cshtml
@@ -2,12 +2,12 @@
     ViewData["Title"] = "Perdedor";
 }
     <video src='@Url.Content("~/vid/carcel.mp4")'autoplay loop></video>
-  <nav>
+ <nav>
         <img src="img/logo.png" alt="">
         <ul>
             <li> <a href='@Url.Action("Index","Home")'>Inicio</a> </li>
             <li> <a href='@Url.Action("Tutorial","Home")'>Tutorial</a> </li>
-            <li> <a href='@Url.Action("Comenzar","Home")'>Iniciar Juego</a> </li>
+            <li> <a href='@Url.Action("Iniciar","Home")'>Iniciar Juego</a> </li>
             <li> <a href='@Url.Action("Continuar","Home")'>Continuar Juego</a> </li>
             <li> <a href='@Url.Action("Pistas","Home")'>Pistas</a> </li>
             <li> <a href='@Url.Action("Creditos","Home")'>Creditos</a> </li>
@@ -15,6 +15,6 @@
     </nav>
     <main id="mainGanador">
             <h1 style="color: red;">¡PERDISTE!</h1>
-            <a href='@Url.Action("Comenzar","Home")'><button id="reiniciar"><strong>Reiniciar</strong></button></a> 
+            <a href='@Url.Action("Iniciar","Home")'><button id="reiniciar"><strong>Reiniciar</strong></button></a> 
     </main>
     <footer></footer>
