--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -280,10 +280,10 @@ main .main__buttons a:hover {
   justify-content: initial;
 }
 #mainGanador h1 {
-  margin-top: 250px;
+  margin-top: 100px;
 }
 #mainGanador button {
-  margin-top: 100px;
+  margin-top: 30px;
   font-size: 2em;
 }
 .confetiIzquierda {
@@ -524,4 +524,90 @@ main .main__buttons a:hover {
     left: 0;
     top: 50%;
     margin-top: -5px;
+   }
+   #TablaDatos {
+    display: grid;
+    grid-template-columns: 4fr 3fr 4fr;
+    width: 800px;
+    background-color: rgba(88, 88, 88, 0.473);
+    color: white;
+    justify-items: center;
+    align-content: center;
+    margin-top: 100px;
+   }
+   .formUsuario {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 75px;
+    margin-bottom: 50px;
+   }
+   .formUsuario h4 {
+      font-size: 1.3em;
+      color: white;
+   }
+   .formUsuario input {
+    height: 30px;
+    width: 400px;
+    border: none;
+    outline: none;
+   }
+   .enviarForm {
+    --color: #0077ff;
+    font-family: inherit;
+    display: inline-block;
+    width: 6em;
+    height: 2.6em;
+    line-height: 2.5em;
+    overflow: hidden;
+    margin: 20px;
+    font-size: 17px;
+    z-index: 1;
+    color: var(--color);
+    border: 2px solid var(--color);
+    border-radius: 6px;
+    position: relative;
+  }
+  
+  .enviarForm::before {
+    position: absolute;
+    content: "";
+    background: var(--color);
+    width: 150px;
+    height: 200px;
+    z-index: -1;
+    border-radius: 50%;
+  }
+  
+  .enviarForm:hover {
+    color: white;
+  }
+  
+  .enviarForm:before {
+    top: 100%;
+    left: 100%;
+    transition: .3s all;
+  }
+  
+  .enviarForm:hover::before {
+    top: -30px;
+    left: -30px;
+  }
+   #TablaDatos h3 {
+    height: 60px;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 0;
+    font-size: 1.5em;
+    border: 1px #212121 solid;
+   }
+   #TablaDatos h3:first-child, #TablaDatos h3:nth-child(2), #TablaDatos h3:nth-child(3) {
+    height: 70px;
+    width: 100%;
+    font-size: 2em;
+    display: flex;
+    justify-content: center;
+    align-items: center;
    }
